Project setting configurations to remove rough edges in VR

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 r.MobileHDR=True
 r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
-r.MobileMSAA=1
+r.MobileMSAA=8
 r.DiscardUnusedQuality=False
 r.AllowOcclusionQueries=True
 r.MinScreenRadiusForLights=0.030000
@@ -15,7 +15,7 @@ Compat.UseDXT5NormalMaps=False
 r.ClearCoatNormal=False
 r.ReflectionCaptureResolution=128
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
-r.ForwardShading=False
+r.ForwardShading=True
 r.VertexFoggingForOpaque=True
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
@@ -37,7 +37,7 @@ r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
-r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.AntiAliasing=3
 r.StencilForLODDither=False
 r.EarlyZPass=3
 r.EarlyZPassMovable=True
@@ -51,7 +51,7 @@ r.AllowGlobalClipPlane=False
 r.GBufferFormat=1
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
-vr.InstancedStereo=False
+vr.InstancedStereo=True
 vr.MultiView=False
 vr.MobileMultiView=False
 vr.MobileMultiView.Direct=False
