Setup: Add gitignore for large assets

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Ignore Large Assets that will be shared among the team
+Content/Assets/*/
+
+
+
+
+
 # Visual Studio 2015 user specific files
 .vs/
 
