--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -80,6 +80,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 EditorStartupMap=/Game/Map.Map
 GameDefaultMap=/Game/Map.Map
 GlobalDefaultGameMode=/Game/PlayerController/VR_GameMode.VR_GameMode_C
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -121,5 +122,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
