--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
+Content/SpellSystem/SpellComponents/Demo/Level_Test_SpellSpawner.umap
