--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,7 +31,7 @@ r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=False
 r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
+r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
