--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,11 +1,5 @@
 
 [/Script/Engine.InputSettings]
--AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
--AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
--AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 -AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -84,6 +78,12 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Controller_Right_FaceButton_3",Key=MotionController_Right_FaceButton3,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Controller_Right_FaceButton_4",Key=MotionController_Right_FaceButton4,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Controller_Left_Shoulder",Key=MotionController_Left_Shoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Controller_Right_Shoulder",Key=MotionController_Right_Shoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Controller_Left_Trigger",Key=LeapLeftGrab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Controller_Right_Trigger",Key=LeapRightGrab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Controller_Left_Shoulder",Key=LeapLeftPinch,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Controller_Right_Shoulder",Key=LeapRightPinch,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Controller_Left_Shoulder",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Controller_Right_Shoulder",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Controller_Left_Trigger",Key=MotionController_Left_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Controller_Right_Trigger",Key=MotionController_Right_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -99,6 +99,24 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Controller_Right_FaceButton_4",Key=MotionController_Right_FaceButton4,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Controller_Left_Shoulder",Key=MotionController_Left_Shoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Controller_Right_Shoulder",Key=MotionController_Right_Shoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Controller_Left_Trigger",Key=LeapLeftGrab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Controller_Right_Trigger",Key=LeapRightGrab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Controller_Left_Shoulder",Key=LeapLeftPinch,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Controller_Right_Shoulder",Key=LeapRightPinch,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Controller_Left_Shoulder",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Controller_Right_Shoulder",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-AxisMappings=(AxisName="Controller_Left_Thumbstick_X",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
+-AxisMappings=(AxisName="Controller_Left_Thumbstick_Y",Key=MotionController_Left_Thumbstick_Y,Scale=1.000000)
+-AxisMappings=(AxisName="Controller_Right_Thumbstick_X",Key=MotionController_Right_Thumbstick_X,Scale=1.000000)
+-AxisMappings=(AxisName="Controller_Right_Thumbstick_Y",Key=MotionController_Right_Thumbstick_Y,Scale=1.000000)
+-AxisMappings=(AxisName="Controller_Left_TriggerAxis",Key=MotionController_Left_TriggerAxis,Scale=1.000000)
+-AxisMappings=(AxisName="Controller_Right_TriggerAxis",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
++AxisMappings=(AxisName="Controller_Left_Thumbstick_X",Key=MotionController_Left_Thumbstick_X,Scale=1.000000)
++AxisMappings=(AxisName="Controller_Left_Thumbstick_Y",Key=MotionController_Left_Thumbstick_Y,Scale=1.000000)
++AxisMappings=(AxisName="Controller_Right_Thumbstick_X",Key=MotionController_Right_Thumbstick_X,Scale=1.000000)
++AxisMappings=(AxisName="Controller_Right_Thumbstick_Y",Key=MotionController_Right_Thumbstick_Y,Scale=1.000000)
++AxisMappings=(AxisName="Controller_Left_TriggerAxis",Key=MotionController_Left_TriggerAxis,Scale=1.000000)
++AxisMappings=(AxisName="Controller_Right_TriggerAxis",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
