Set project default map to Level_Test_Spell_Casting

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,8 +77,8 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map.Map
-GameDefaultMap=/Game/Map.Map
+EditorStartupMap=/Game/SpellSystem/SpellComponents/Demo/Level_Test_Spell_Casting.Level_Test_Spell_Casting
+GameDefaultMap=/Game/SpellSystem/SpellComponents/Demo/Level_Test_Spell_Casting.Level_Test_Spell_Casting
 GlobalDefaultGameMode=/Game/PlayerController/VR_GameMode.VR_GameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
@@ -122,5 +122,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
