--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta.2",
     "vue": "^2.5.2",
-    "vue-agile": "^0.2.6"
+    "vue-agile": "^0.2.6",
+    "vue-scrollactive": "^0.4.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
