--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-beta.2",
+    "lodash": "^4.17.4",
     "vue": "^2.5.2",
     "vue-agile": "^0.2.6",
     "vue-scrollactive": "^0.4.6"
