--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
     "build": "node build/build.js",
+    "surge": "surge ./dist www.vindicator.ga",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
