Configure packaging config

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,43 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=849ACDF549EB31AF607B938772B6890A
+bStartInVR=True
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bWarnIfPackagedWithoutNativizationFlag=True
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bSkipEditorContent=False
++MapsToCook=(FilePath="/Game/Level/Game-EntryLevel")
++MapsToCook=(FilePath="/Game/Level/Game-GrassLandLevel")
++MapsToCook=(FilePath="/Game/Level/Game-IceLand")
++MapsToCook=(FilePath="/Game/Level/Game-TutorialLevel")
++DirectoriesToAlwaysCook=(Path="Splash")
++DirectoriesToAlwaysStageAsUFS=(Path="Splash")
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
