--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,7 +78,7 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/SpellSystem/SpellComponents/Demo/Level_Test_Spell_Casting.Level_Test_Spell_Casting
-GameDefaultMap=/Game/SpellSystem/SpellComponents/Demo/Level_Test_Spell_Casting.Level_Test_Spell_Casting
+GameDefaultMap=/Game/Level/Game-EntryLevel.Game-EntryLevel
 GlobalDefaultGameMode=/Game/PlayerController/VR_GameMode.VR_GameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 
